Fix - styles for hiding article and layout alignment Add - block template to hide user profile article

--- a/web/themes/custom/hm-public-theme/static/sass/base/_layout.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/base/_layout.scss
@@ -73,7 +73,11 @@ div.wrapper .sidebar.second {
 }
 
 section.content.column.section-wrapper {
-  padding: 0;
+  padding: 0 $default-grid-gutter-width 0 0;
+}
+
+.wrapper.layout--1-1col {
+  margin-right: -30px;
 }
 
 //Place Back to Top button below views
