--- a/web/themes/custom/hm-public-theme/static/sass/pages/_user-profile.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/pages/_user-profile.scss
@@ -13,7 +13,7 @@
 }
 
 article {
-  display: none;
+  //display: none;
 }
 
 .column.sidebar.first {
